making resources pages

--- a/src/app/entry/entryLanding/entryLanding.html
+++ b/src/app/entry/entryLanding/entryLanding.html
@@ -5,13 +5,13 @@
 
    <div class="entry-body row">     
         <div class="col-md-6 offset-md-3">
-            <div class="card">
-                <div class="card-block">
+            <md-card>
+                <md-card-content>
                     Please select the resource you want to enter from the list to the left.
                     <br>
                     Please answer every question to the best of your ability.
-                </div>
-            </div>
+                </md-card-content>
+            </md-card>
         </div>
     </div>
 </div>
