--- a/src/app/entry/entryPerson/entryPerson.html
+++ b/src/app/entry/entryPerson/entryPerson.html
@@ -495,8 +495,8 @@
                                 ng-true-value="true" 
                                 ng-false-value="false"
                                 name="personTypeSeven"
-                                [(ngModel)]="submission.data.categories['Song from another country (or World Song)']"
-                                >Song from another country (or 'World Song')</md-checkbox>
+                                [(ngModel)]="submission.data.categories['World Song (a song not from the U.S. or Canada)']"
+                                >World Song (a song not from the U.S. or Canada)</md-checkbox>
                     
                             <md-checkbox class="block-input"
                                 ng-true-value="true" 
