--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,6 +30,7 @@ html, body, #root {
   margin: 0;
   height: 100%;
   font-family: 'Open Sans', sans-serif;
+  background-color: #fafafa;
 }
 
 body, h1, h2, h3 {
@@ -52,7 +53,7 @@ a {
   flex-direction: column;
   min-height: 100%;
 
-  background: url('https://static.pexels.com/photos/2324/skyline-buildings-new-york-skyscrapers.jpg') no-repeat center center fixed; 
+  /*background: url('https://static.pexels.com/photos/2324/skyline-buildings-new-york-skyscrapers.jpg') no-repeat center center fixed; */
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -167,10 +168,10 @@ a {
     left: 0;
     z-index: 1;
     display: block;
+    background-color: #fff;
     padding: 20px;
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-    background-color: #f5f5f5;
     border-right: 1px solid #eee;
   }
 }
@@ -191,8 +192,8 @@ a {
   }
 }
 .nav-sidebar{
+  text-align: center;
   li {
-    text-align: center;
     a {
       padding-right: 20px;
       padding-left: 20px;
