--- a/src/app/edit/editEvents/editEvents.html
+++ b/src/app/edit/editEvents/editEvents.html
@@ -20,6 +20,10 @@
                 <br>
                 <br>
                 <br>
+                <b style="font-weight: 700;">Event Type:</b> {{ event?.data.type }}
+                <br>
+                <br>
+                <br>
                 <b style="font-weight: 700;">Event website:</b> <a href="{{ event?.data.url }}">{{ event?.data.url }}</a>  
                 <br>
                 <br>
