--- a/src/app/view/view/view.html
+++ b/src/app/view/view/view.html
@@ -11,9 +11,8 @@
                             <div md-card-avatar class="resource-header-image"><md-icon>{{tile.icon}}</md-icon></div>
                             <md-card-title>{{tile.text}}</md-card-title>
                         </md-card-header>
-                        <img md-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg">
+                        <img md-card-image src="https://static.pexels.com/photos/46274/pexels-photo-46274.jpeg">
                         <md-card-content>
-                            <h1><md-icon>{{tile.icon}}</md-icon></h1>
                             <p>
                             {{tile.text}}
                             </p>
