--- a/src/app/view/view/view.scss
+++ b/src/app/view/view/view.scss
@@ -1,4 +1,5 @@
 .view-content {
+  text-align: center;
     padding: 10% 10% 5% 10%; 
     .col-6, .col-md-4 {
       margin-bottom: 4%;
@@ -6,6 +7,10 @@
 }
 
 .resource-card {
+  img {
+    height: 230px;
+    // background-color: dodgerblue;
+  }
   background-color: lightblue;
 }
 
