--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -4,7 +4,7 @@
   <main class="main">
       <div class="options">
         <button md-raised-button color="primary" (click)=toLogIn()>Enter in resources</button>
-        <button md-raised-button>Explore on my own</button> 
+        <button md-raised-button (click)=toViewAll()>Explore on my own</button> 
       </div>
       
   </main>
