--- a/src/app/entry/entryResources/entryResources.html
+++ b/src/app/entry/entryResources/entryResources.html
@@ -5,7 +5,7 @@
   <div class="entry-body row">
     <div class="col-md-8 offset-md-3">
       <md-card>
-        <div *ngIf="!submission.data.title">
+        <div>
         <md-card-content>
             <md-card-subtitle class="entry-card-header">
                 {{content?.fields.instructions}} 
@@ -554,9 +554,7 @@
                         Both</md-radio-button>
                 </md-radio-group>
             </div>      
-
-            {{ resource?.resource }}       
-
+ 
             <md-card-actions>
               <button md-raised-button color="primary" type="submit" 
               [disabled]="resourceForm.invalid">
@@ -569,11 +567,6 @@
           </form>
           
         </md-card-content>
-        </div>
-        <div *ngIf="submission?.data.title">
-            <!--<hymn-edit-resources>WABLARGH</hymn-edit-resources>
-            <h1>Show up?</h1>-->
-            {{ resource?.resource }}
         </div>
       </md-card>
     </div>
