--- a/src/app/edit/editPerson/editPerson.html
+++ b/src/app/edit/editPerson/editPerson.html
@@ -83,6 +83,9 @@
                 <button md-raised-button color="primary" type="submit" (click)="approve(person?.id)">
                     Approve
                 </button>
+                <button md-button (click)="edit(resource)">
+                    Edit
+                </button>
                 <button md-button (click)="delete()">
                     Delete
                 </button>
