--- a/src/app/quiz/quizNext/quizNext.html
+++ b/src/app/quiz/quizNext/quizNext.html
@@ -1,7 +1,8 @@
 <div class="entry-container right">
     <hymn-header></hymn-header>
     <div class="view-content"><!-- content field -->
-        <h1>Select content</h1>
+        <h2>Click on a card to find your matches!</h2>
+        <br>
             <div class="row">
                 <div class="col-6 col-md-4" 
                     *ngFor="let tile of tiles">
