everyhting by cong form done now

--- a/src/app/edit/editEvents/editEvents.html
+++ b/src/app/edit/editEvents/editEvents.html
@@ -91,6 +91,9 @@
                 <button md-raised-button color="primary" type="submit" (click)="approve(event?.id)">
                     Approve
                 </button>
+                <button md-button (click)="edit(event)">
+                    Edit
+                </button>
                 <button md-button (click)="delete()">
                     Delete
                 </button>
