added in API requests and small edits

--- a/src/app/edit/editOrganizations/editOrganizations.html
+++ b/src/app/edit/editOrganizations/editOrganizations.html
@@ -87,7 +87,7 @@
                 <button md-raised-button color="primary" type="submit" (click)="approve(organization?.id)">
                     Approve
                 </button>
-                <button md-button (click)="edit(organization)">
+                <button md-button (click)="edit()">
                     Edit
                 </button>
                 <button md-button (click)="delete()">
