--- a/src/app/edit/editPerson/editPerson.html
+++ b/src/app/edit/editPerson/editPerson.html
@@ -83,7 +83,7 @@
                 <button md-raised-button color="primary" type="submit" (click)="approve(person?.id)">
                     Approve
                 </button>
-                <button md-button (click)="edit(resource)">
+                <button md-button (click)="edit()">
                     Edit
                 </button>
                 <button md-button (click)="delete()">
