--- a/src/app/edit/editCongregations/editCongregations.html
+++ b/src/app/edit/editCongregations/editCongregations.html
@@ -71,7 +71,7 @@
                 <button md-raised-button color="primary" type="submit" (click)="approve(congregation?.id)">
                     Approve
                 </button>
-                <button md-button (click)="edit(congregation)">
+                <button md-button (click)="edit()">
                     Edit
                 </button>
                 <button md-button (click)="delete()">
