most of cards done

--- a/src/app/quiz/quizResults/quizResults.scss
+++ b/src/app/quiz/quizResults/quizResults.scss
@@ -27,3 +27,13 @@ md-card-content {
     padding-left: 5%;
 }
 
+md-card-footer {
+    ul {
+      list-style-type: none;
+    }
+}
+
+.float-right {
+  float: right;
+}
+
