fixed front pages, need quizzes

--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -1,6 +1,6 @@
 <header class="header nav navbar-default">
   <p class="header-title">
-    <a href="" routerLink="/" target="_blank">
+    <a href="/" routerLink="/">
       The Center for Congregational Song
     </a>
   </p>
